--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@types/node": "^22.14.1",
     "bcrypt": "^5.1.1",
+    "ical": "^0.8.0",
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-ical": "^0.20.1",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
