--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.3",
     "bcrypt": "^5.1.1",
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -19,5 +18,6 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9"
-  }
+  },
+  "description": ""
 }
