--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,21 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.15.3",
+    "aws-amplify": "^6.14.4",
     "bcrypt": "^5.1.1",
     "ical.js": "^2.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "typescript": "^5.8.3"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.7.1",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9"
+    "@types/jsonwebtoken": "^9.0.9",
+    "aws-cdk-lib": "^2.189.1",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.4",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3"
   },
   "description": ""
 }
