--- a/amplify.yml
+++ b/amplify.yml
@@ -1,9 +1,9 @@
 frontend:
   phases:
-    preBuild:
-      commands:
-        - cd client
-        - npm ci
     build:
       commands:
         - npm run build
+    artifacts:
+      baseDirectory: /client
+      files:
+          - '**/*'
