--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,13 +16,13 @@
     "aws-amplify": "^6.14.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "express": "^5.1.0",
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "node-ical": "^0.20.1",
-    "typescript": "^5.8.3",
-    "express": "^5.1.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
@@ -30,6 +32,7 @@
     "aws-cdk-lib": "^2.189.1",
     "constructs": "^10.4.2",
     "esbuild": "^0.25.4",
+    "nodemon": "^3.1.10",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3"
   },
