--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "client": "cd client && npm run dev",
-    "server": "cd server && nodemon server.js",
+    "server": "cd server && npm run build && npm run dev",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "devDependencies": {
