--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,14 @@
     "aws-amplify": "^6.14.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "node-ical": "^0.20.1",
-    "typescript": "^5.8.3",
-    "express": "^5.1.0",
-    "serverless-http": "^3.2.0"
+    "serverless-http": "^3.2.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
