--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -110,7 +110,7 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts", "supabase.js"],
   "exclude": ["node_modules"]
 }
 
