--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "react-calendar": "^6.0.0",
+    "react-icons": "^5.5.0"
   }
 }
