--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^3.4.1",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "xclip": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
