--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node server.js",
-    "start": "node server.js"
+    "dev": "ts-node server.ts",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,13 +20,13 @@
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
-    "node-ical": "^0.20.1",
-    "serverless-http": "^3.2.0"
+    "node-ical": "^0.20.1"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.16.1",
     "@aws-amplify/backend-cli": "^1.7.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/multer": "^1.4.12",
