--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "react-calendar": "^6.0.0",
     "react-icons": "^5.5.0"
   }
