--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "googleapis": "^149.0.0",
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
