--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^6.14.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "ical.js": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
